# AR-glasses

./: .gitignore  README.md
ProductARGlasses/: settings.gradle.kts
ProductARGlasses/app/: build.gradle.kts
ProductARGlasses/app/src/androidTest/java/com/ultronai/productarglasses/: ExampleInstrumentedTest.kt
ProductARGlasses/app/src/main/: AndroidManifest.xml
ProductARGlasses/app/src/main/java/com/ultronai/productarglasses/: MainActivity.kt  ProductARGlassesApp.kt
ProductARGlasses/app/src/main/res/layout/: activity_main.xml
ProductARGlasses/app/src/main/res/values/: strings.xml  themes.xml
ProductARGlasses/app/src/test/java/com/ultronai/productarglasses/: ExampleUnitTest.kt
ProductARGlasses/gradle/wrapper/: gradle-wrapper.properties
ProductARMobile/: settings.gradle.kts
ProductARMobile/app/: build.gradle.kts
ProductARMobile/app/libs/: qtld-release.aar
ProductARMobile/app/src/androidTest/java/com/ultronai/productarmobile/: ExampleInstrumentedTest.kt
ProductARMobile/app/src/main/: AndroidManifest.xml
ProductARMobile/app/src/main/assets/: planogram.json  products.json
ProductARMobile/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
ProductARMobile/app/src/main/java/com/ultronai/productarmobile/: MainActivity.kt
ProductARMobile/app/src/main/res/layout/: activity_main.xml
ProductARMobile/app/src/main/res/values/: strings.xml  themes.xml
ProductARMobile/app/src/test/java/com/ultronai/productarmobile/: ExampleUnitTest.kt
ProductARMobile/gradle/wrapper/: gradle-wrapper.properties
QnnTest/: settings.gradle.kts
QnnTest/app/: build.gradle.kts
QnnTest/app/src/androidTest/java/com/ultronai/qnntest/: ExampleInstrumentedTest.kt
QnnTest/app/src/main/: AndroidManifest.xml
QnnTest/app/src/main/java/com/ultronai/qnntest/: MainActivity.kt
QnnTest/app/src/main/res/values/: strings.xml  themes.xml
QnnTest/gradle/wrapper/: gradle-wrapper.properties
docs/: Setup1-Design-Doc.tex  code_problems.md  work.md
scripts/: download_models.sh
(+21 files in other folders)
